// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AverageEngagementDuration when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <a
    class="chart__title"
    href="/definitions#report_historical_average_engagement_time"
  >
    Average Engagement Time Per Session
  </a>
  <div>
    <div
      class="data chart__rate padding-top-05"
    >
      1 min 3 sec
    </div>
  </div>
</DocumentFragment>
`;

exports[`AverageEngagementDuration when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <a
    class="chart__title"
    href="/definitions#report_historical_average_engagement_time"
  >
    Average Engagement Time Per Session
  </a>
  <div>
    <div
      class="data chart__rate padding-top-05"
    />
  </div>
</DocumentFragment>
`;

exports[`AverageEngagementDuration when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <a
    class="chart__title"
    href="/definitions#report_historical_average_engagement_time"
  >
    Average Engagement Time Per Session
  </a>
  <div>
    <div
      class="data chart__rate padding-top-05"
    />
  </div>
</DocumentFragment>
`;
